# SQLite-to-Postgres

./: .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.localdb.yaml  pyproject.toml
schema_design/: movies_database.ddl
sqlite_to_postgres/: config.py  load_data.py
sqlite_to_postgres/db/: postgres.py  sqlite.py
sqlite_to_postgres/schemas/: sqlite.py
sqlite_to_postgres/tests/: check_consistency.py
